<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.enyata.framework.mvvm.ui.mainActivity.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.enyata.framework.mvvm.ui.mainActivity.MainActivityViewModel" />


    </data>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans"
                        android:textFontWeight="500"
                        android:textColor="@color/bluish"
                        android:text="@string/email"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:srcCompat="@drawable/ic_mailicon" />

                        <EditText
                            android:id="@+id/loginEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35dp"
                            android:drawablePadding="20dp"
                            android:fontFamily="@font/nunito_sans_italic"
                            android:hint="@string/hintEmail"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="20dp"
                            android:textSize="12sp" />

                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans"
                        android:textFontWeight="500"
                        android:textColor="@color/bluish"
                        android:text="@string/password"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="23dp"
                            app:srcCompat="@drawable/ic_padlockicon" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/loginPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="10dp"
                                android:drawablePadding="20dp"
                                android:fontFamily="@font/nunito_sans_italic"
                                android:hint="@string/hintPassword"
                                android:inputType="textPassword"
                                android:paddingBottom="20dp"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </RelativeLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/forgot"
                    android:textColor="@color/orange"
                    android:textSize="14dp" />


                <Button
                    android:id="@+id/BtnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />


            </LinearLayout>

        </LinearLayout>
</ScrollView>

    </FrameLayout>
</layout>
