<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.enyata.framework.mvvm.ui.support.SupportActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.enyata.framework.mvvm.ui.support.SupportViewModel" />


    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/backArrow"
                android:onClick="@{() -> viewModel.OnArrow()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                app:srcCompat="@drawable/ic_arrow2" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/backArrow"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical"
                android:text="Help &amp; Support"
                android:textColor="#298DCC"
                android:textFontWeight="700"
                android:textSize="18sp" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/nameContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/faq"
                android:textColor="@color/bluish"
                android:textSize="18sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#F2F2F2" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/bluish"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/contact"
                android:textSize="18sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#F2F2F2" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/bluish"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/terms"
                android:textSize="18sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#F2F2F2" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluish"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/privacy"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#F2F2F2" />



        </LinearLayout>
    </LinearLayout>


</layout>